--- a/styles/sass/partials/_inline-controls-panel.scss
+++ b/styles/sass/partials/_inline-controls-panel.scss
@@ -46,6 +46,7 @@ div.ugallery-controls i.upfront-icon:before {
 .upfront-element-controls .upfront-inline-panel {
 	z-index: 3000;
     border: 1px solid #cccccc;
+	background: #fff;
 }
 .upfront-element-controls.ugallery-controls .upfront-inline-panel {
 	border: none;
